--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
