--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.3.0"
   },
   "browserslist": [
     "last 2 Chrome versions"
